[package]
name = "target_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3", features = ["cargo"]}
object = "0.28"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
log = "0.4"
env_logger = "0.9"
libloading = "0.7"
once_cell = "1.9"
tempfile = "3.3"
cfg-if = "1.0"
byteorder = "1"
regex = "1"

[build-dependencies]
bindgen = "0.59"
